--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -1,6 +1,6 @@
 .spinner {
     width: 500px;
-    /*height: auto;*/
+    height: 500px;
     /*position: absolute;*/
     /*left: -5%;*/
     /*z-index: 99;*/
