--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -4,6 +4,6 @@
     /*position: absolute;*/
     /*left: -5%;*/
     /*z-index: 99;*/
-    display: flex;
+    /*display: flex;*/
     /*margin:auto;*/
 }
