--- a/src/static/spinit.css
+++ b/src/static/spinit.css
@@ -6,24 +6,17 @@ body {
 }
 
 #maincontent {
-    max-width: 800px;
-    margin: 0 auto;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#maincontent img {
-    max-width: 100%;
+    max-width: 100vw;
+    height: 100vh;
+    position: relative;
 }
 
 .spinitbutton {
-    text-align: center;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
 }
-
-.spincontent {
-    display: none;
-}
-
 
 .spinitbutton button {
     -webkit-appearance: none;
@@ -45,10 +38,10 @@ body {
     text-indent: 0;
     background: url('/static/button.jpg') no-repeat;
     background-position: 0 0;
+    filter: hue-rotate(230deg);
     width: 221px;
     height: 225px;
     margin: 70px 0;
-    cursor: pointer;
 }
 
 .spinitbutton button:active {
