--- a/src/static/spinit.css
+++ b/src/static/spinit.css
@@ -47,3 +47,12 @@ body {
 .spinitbutton button:active {
     background-position: 0 -241px;
 }
+
+.title {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 4    5px;
+}
+.motivation-text {
+    color: red;
+}
